Fix overlapping on menu for smaller screens

--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -3,5 +3,5 @@ footer {
 	border-top: 1px solid $light-font-color;
 	width: 100%;
 	bottom: 0;
-	position: fixed;
+	position: relative;
 }
